[package]
name = "gui"
version = "0.2.0"
edition = "2021"

[dependencies]
# HTTP 客戶端
reqwest = { version = "0.11", features = ["json", "blocking"] }

# 序列化和反序列化
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"

# 正則表達式
regex = "1.5.4"

# 隨機數生成
rand = "0.8.4"

# 錯誤處理
anyhow = "1.0.40"
thiserror = "1.0"

# 異步運行時
tokio = { version = "1", features = ["full"] }

# GUI 框架
eframe = "0.27.2"
egui = "0.27.2"

# 圖像處理
image = "0.25.1"

# 靜態初始化
lazy_static = "1.4.0"

# 剪貼板操作
clipboard = "0.5.0"

# URL 處理
url = "2.5.2"
urlencoding = "2.1.3"

# 日誌記錄
log = "0.4.21"
simple_logger = "5.0.0"
simplelog = "0.12.2"

# 日期和時間處理
chrono = "0.4.38"

# Windows API 接口（如果需要的話）
winapi = "0.3.9"

# 系統
sysinfo = "0.31.4"

# 檢測系統深色/淺色模式
dark-light = "1.1.1"

# Spotify API 客戶端
rspotify = { version = "0.13.2", features = ["client-reqwest", "reqwest-native-tls"] }

# Base64 編碼/解碼（目前似乎未使用）
base64 = "0.13"

# 打開網頁
open = "5.3.0"

futures = "0.3.30"
futures-util = "0.3.30"

dirs = "5.0.0"
rfd = "0.15.0"

# 多線程同步
parking_lot = "0.12.3"

[lib]
name = "lib"
path = "src/lib1.rs"

