[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
regex = "1.5.4"
rsa = "0.4.0"
rand = "0.8.4"

aead = "0.3.2"
anyhow = "1.0.40"
tokio = { version = "1", features = ["full"] }

eframe = "0.15"

encoding_rs = "0.8.34"

egui = "0.27.2"  


[lib]
name = "spotify_search_lib"
path = "src/lib1.rs"

