[package]
name = "gui"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
regex = "1.5.4"
rsa = "0.4.0"
rand = "0.8.4"

aead = "0.3.2"
anyhow = "1.0.40"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

eframe = "0.27.2"
egui = "0.27.2"
egui_extras = "0.27.2"

encoding_rs = "0.8.34"

image = "0.25.1"

lazy_static = "1.4.0"

clipboard = "0.5.0"

url = "2.5.2"
urlencoding = "2.1.3"

log = "0.4.21"
env_logger = "0.11.3"
simple_logger = "5.0.0"
simplelog = "0.12.2"
chrono = "0.4.38"

winapi = "0.3.9"
dark-light = "1.1.1"

rspotify = "0.13.2"

thiserror = "1.0"








[lib]
name = "lib"
path = "src/lib1.rs"

