[package]
name = "spotify_search"
version = "0.1.0"
authors = ["fivepeok05,big_jellyfish,molaylay <<Discord_id>>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json","blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
regex = "1.5.4"
rsa = "0.4.0"
rand = "0.8.4"
aes-gcm = "0.9.3"
aead = "0.3.2"
anyhow = "1.0.40"
aes-soft = "0.6.4"
aes = "0.7"
block-modes = "0.8"
cipher="0.3"